--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sveltekit-starter",
+  "name": "monthly-surprise-calendar",
   "private": true,
   "version": "0.0.1",
   "type": "module",
